Update JavaCMSCollector.md